# AoC25

./: .ghc.environment.x86_64-darwin-8.6.3  aoc25.cabal  five.hs  four.hs  hie.yaml  one.hs  six.hs  three.hs  two.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
