cabal-version: 2.4
name: aoc25
version: 0.1.0.0
build-type: Simple

executable one
  main-is: one.hs
  hs-source-dirs: .
  build-depends:
      base >=4.12 && <5
  default-language: Haskell2010

executable two
  main-is: two.hs
  hs-source-dirs: .
  build-depends:
      base >=4.12 && <5,
      split
  default-language: Haskell2010

executable three
  main-is: three.hs
  hs-source-dirs: .
  build-depends:
      base >=4.12 && <5
  default-language: Haskell2010


executable four
  main-is: four.hs
  hs-source-dirs: .
  build-depends:
      containers,
      base >=4.12 && <5
  default-language: Haskell2010

executable five
  main-is: five.hs
  hs-source-dirs: .
  build-depends:
      containers,
      base >=4.12 && <5
  default-language: Haskell2010

executable six
  main-is: six.hs
  hs-source-dirs: .
  build-depends:
      containers,
      base >=4.12 && <5
  default-language: Haskell2010